tests/errors/test_88.x
// Struct imported into namespace already exists

using str;

struct str -> {
	val: i64
}

fn main() -> void {}
